# weather-bot

./: .dockerignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.gitea/workflows/: build-test.yaml  docker.yaml
http/weather/: Rain prediction.bru  Seven Day Forcast.bru  Todays weather forcast.bru  location.bru
src/: background_job.rs  health.rs  main.rs  telegram.rs  weather.rs
src/controllers/: weather_controller.rs
src/types/: weather_types.rs
