[package]
name = "actix-web"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
reqwest = { version = "0.12.12", features = ["json"] }
teloxide = { version = "0.13", features = ["macros"] }
log = "0.4"
pretty_env_logger = "0.5"
tokio = { version = "1.8", features = ["rt-multi-thread", "macros"] }
dotenv = "0.15.0"
serde = "1.0.217"
serde_json = "1.0.138"
chrono = "0.4.39"
